linear output layer is "working" but the loss is going negative now, and it is not pushing past 80% which is what the surface/link count features should be getting

--- a/queries exp expanded features 3b.ipynb
+++ b/queries exp expanded features 3b.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "Working on adding a lot of features just to see if it can get the score up regardless of how complicated or where the data is coming from\n",
     "\n",
@@ -13,7 +11,8 @@
     "* Taget given surface counts\n",
     "* words from the target and source document\n",
     "  * possible back prop into these vectors, idea is to replace tf-idf with some nn and back prop here\n",
-    "* using a linear layer near the output to combine the features"
+    "* the extra feature are going in with the target vec when approperate\n",
+    "    "
    ]
   },
   {
@@ -98,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -150,29 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4056055"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(wordvectors.vectors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -184,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -201,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -212,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -282,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -293,29 +281,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4056055"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(wordvectors.vectors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -562,7 +539,7 @@
     "        )\n",
     "        \n",
     "        self.target_matched_counts_input_l = lasagne.layers.InputLayer(\n",
-    "            (None,5),\n",
+    "            (None,4),\n",
     "            input_var=self.x_matches_counts.astype(theano.config.floatX),\n",
     "        )\n",
     "\n",
@@ -629,7 +606,7 @@
     "        )\n",
     "\n",
     "        self.target_simple = lasagne.layers.DenseLayer(\n",
-    "            self.target_embedding_l, #self.target_combined_feats_l,\n",
+    "            self.target_combined_feats_l,\n",
     "            name='target_simple1',\n",
     "            num_units=compared_vector_size,\n",
     "            nonlinearity=lasagne.nonlinearities.linear,\n",
@@ -683,47 +660,10 @@
     "            return T.maximum(T.basic.pow(T.basic.pow(T.basic.abs_(v), 2).sum(axis=1) + .001, .5), .001)\n",
     "\n",
     "        self.res_l = self.dotted_vectors / (augNorm(self.target_out) * augNorm(self.source_aligned_l) + .001)\n",
-    "        \n",
-    "        self.res_cap = T.clip((T.tanh(self.res_l) + 1) / 2, .001, .999)\n",
-    "        \n",
-    "        #############################\n",
-    "        ## Linear features combined\n",
-    "        #############################\n",
-    "        \n",
-    "        \n",
-    "        self.linear_features_combined = lasagne.layers.concat(\n",
-    "            [lasagne.layers.InputLayer(\n",
-    "                    (None, 1), \n",
-    "                    input_var=self.res_l.reshape((self.res_l.shape[0], 1)),\n",
-    "                ),\n",
-    "            lasagne.layers.reshape(self.target_matched_surface_input_l, ([0],1)),\n",
-    "            self.target_matched_counts_input_l],\n",
-    "            axis=1\n",
-    "        )\n",
-    "        \n",
-    "        self.linear_features_dens_l = lasagne.layers.DenseLayer(\n",
-    "            self.linear_features_combined,\n",
-    "            nonlinearity=lasagne.nonlinearities.linear,\n",
-    "            num_units=1,\n",
-    "            name='linear_final_l',\n",
-    "            W=lasagne.init.Normal(mean=1.0),\n",
-    "        )\n",
-    "        \n",
-    "        self.linear_output = lasagne.layers.get_output(\n",
-    "            lasagne.layers.reshape(self.linear_features_dens_l, ([0],))\n",
-    "        )\n",
-    "        \n",
-    "        ########################################\n",
-    "        ## true output values\n",
-    "        ########################################\n",
-    "        \n",
-    "        self.true_output = self.linear_output\n",
-    "        \n",
-    "        \n",
-    "        \n",
     "#         self.res_l = self.dotted_vectors / ((self.target_out.norm(1, axis=1) + .001) *\n",
     "#                                             (self.source_aligned_l.norm(1, axis=1) + .001))\n",
     "\n",
+    "        self.res_cap = T.clip((T.tanh(self.res_l) + 1) / 2, .001, .999)\n",
     "\n",
     "        #self.golds = self.res_cap[self.y_answer]\n",
     "\n",
@@ -738,7 +678,7 @@
     "        def setSubSelector(indx, outputs):\n",
     "            return T.set_subtensor(outputs[T.arange(indx[0], indx[1]), indx[3]], 1)\n",
     "\n",
-    "        num_target_samples = self.linear_output.shape[0]\n",
+    "        num_target_samples = self.res_l.shape[0]\n",
     "\n",
     "        select_seq = T.concatenate([\n",
     "            self.y_grouping,\n",
@@ -752,17 +692,15 @@
     "            sequences=select_seq,\n",
     "        )\n",
     "\n",
-    "        self.groupped_elems = T.dot(self.selecting_matrix[-1], \n",
-    "                                    T.diag(T.exp(self.true_output)))\n",
+    "        self.groupped_elems = T.dot(self.selecting_matrix[-1], T.diag(T.exp(self.res_l)))\n",
     "        self.groupped_res = T.log(self.groupped_elems.sum(axis=0)[T.arange(self.y_grouping.shape[0])])\n",
-    "        self.loss_vec = self.groupped_res - self.true_output[self.y_grouping[:,2]]\n",
+    "        self.loss_vec = self.groupped_res - self.res_l[self.y_grouping[:,2]]\n",
     "\n",
     "        self.all_params = (\n",
     "            #lasagne.layers.get_all_params(self.target_dens2) +\n",
     "            # TODO: add params for the target stuff,\n",
     "            lasagne.layers.get_all_params(self.target_simple) +\n",
-    "            lasagne.layers.get_all_params(self.source_dens2) +\n",
-    "            lasagne.layers.get_all_params(self.linear_features_dens_l)\n",
+    "            lasagne.layers.get_all_params(self.source_dens2)\n",
     "            #lasagne.layers.get_all_params(self.document_dens2)\n",
     "        )\n",
     "\n",
@@ -791,19 +729,16 @@
     "            self.y_answer, self.y_grouping\n",
     "        ]  # self.x_target_words,\n",
     "\n",
-    "        ################################################################3\n",
-    "        ## TODO: need to return the actual output layer instead of the res_cap, since that is something else now\n",
-    "        \n",
     "        self.train_func = theano.function(\n",
     "            self.func_inputs,\n",
-    "            [self.true_output, self.loss_vec.sum(), self.loss_vec],\n",
+    "            [self.res_cap, self.loss_vec.sum(), self.loss_vec],\n",
     "            updates=self.updates,\n",
     "            on_unused_input='ignore',\n",
     "        )\n",
     "\n",
     "        self.test_func = theano.function(\n",
     "            self.func_inputs,\n",
-    "            [self.true_output, self.loss_vec.sum(), self.loss_vec],\n",
+    "            [self.res_cap, self.loss_vec.sum(), self.loss_vec],\n",
     "            on_unused_input='ignore',\n",
     "        )\n",
     "\n",
@@ -821,7 +756,7 @@
     "        self.learning_targets = []\n",
     "        self.current_surface_target_counts = []\n",
     "        \n",
-    "        self.failed_match = []\n",
+    "        \n",
     "            \n",
     "    def compute_batch(self, isTraining=True, useTrainingFunc=True):\n",
     "        if isTraining and useTrainingFunc:\n",
@@ -831,6 +766,9 @@
     "        self.reset_accums()\n",
     "        self.total_links = 0\n",
     "        self.total_loss = 0.0\n",
+    "        \n",
+    "        self.failed_match = []\n",
+    "        self.failed_page_match = []\n",
     "\n",
     "        get_words = re.compile('[^a-zA-Z0-9 ]')\n",
     "        get_link = re.compile('.*?\\[(.*?)\\].*?')\n",
@@ -868,11 +806,16 @@
     "                    #cnt = self.page_content.get(WikiRegexes.convertToTitle(target))\n",
     "                    wiki_title = WikiRegexes.convertToTitle(target)\n",
     "                    cnt = self.documentvecs.get_location(wiki_title)\n",
-    "                    if cnt is None:\n",
+    "                    if cnt is None :#or wiki_title == 'nil':\n",
     "                        # were not able to find this wikipedia document\n",
     "                        # so just ignore tihs result since trying to train on it will cause\n",
     "                        # issues\n",
+    "                        # \n",
+    "                        # there are also nil queries that are generated for every document\n",
+    "                        # but we actually have a nil page that is getting referenced\n",
+    "                        # so just filter it out for now\n",
     "                        continue\n",
+    "                    cnt += 1\n",
     "                    if isGold:\n",
     "                        target_gold_loc = len(target_inputs)\n",
     "                    #target_page_input.append(cnt)\n",
@@ -880,10 +823,13 @@
     "                    target_inputs.append(cnt)  # page_content already tokenized\n",
     "                    target_matches_surface.append(int(surmatch == target.lower()))\n",
     "                    target_learings.append((targets, target))\n",
-    "                    target_match_counts.append(surcounts.get(wiki_title, 0))\n",
+    "                    tmc = surcounts.get(wiki_title, 0)\n",
+    "                    if tmc is 0:\n",
+    "                        self.failed_page_match.append((surcounts, wiki_title))\n",
+    "                    target_match_counts.append(tmc)\n",
     "                    #if wiki_title not in surcounts:\n",
     "                    #    print surcounts, wiki_title\n",
-    "                if target_gold_loc is not None or not isTraining:  # if we can't get the gold item\n",
+    "                if target_gold_loc is not -1 or not isTraining:  # if we can't get the gold item\n",
     "                    # contain the index of the gold item for these items, so it can be less then it\n",
     "                    gold_loc = (len(self.current_target_goal) + target_gold_loc)\n",
     "                    sorted_match_counts = [-4,-3,-2,-1] + sorted(set(target_match_counts))\n",
@@ -894,7 +840,6 @@
     "                            int(s == sorted_match_counts[-2]),\n",
     "                            int(s == sorted_match_counts[-3]),\n",
     "                            int(s <= sorted_match_counts[-4]),\n",
-    "                            int(s != 0),  # if there is at least one occurance of this link with the title\n",
     "                        ]\n",
     "                        for s in target_match_counts\n",
     "                    ]\n",
@@ -949,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -980,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1005,32 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def findWrongItems(trainingData=True, numSamples=50):\n",
-    "    ret = {}\n",
-    "    for qu in queries.values():\n",
-    "        for ek, en in qu.items():\n",
-    "            if en['training'] != trainingData:\n",
-    "                continue\n",
-    "            for e in en:\n",
-    "                if en['gold']:\n",
-    "                    if len(ret) > numSamples:\n",
-    "                        return ret\n",
-    "                    m = max(en['vals'].values())\n",
-    "                    g = en['vals'][en['gold']]\n",
-    "                    if g != m and g != 0:\n",
-    "                        ret[ek] = en\n",
-    "    return ret"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -1041,32 +961,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "queries_exp.num_training_items = 5000"
+    "queries_exp.num_training_items = 50000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-0.0506298182741\n",
-      "CPU times: user 2min 53s, sys: 960 ms, total: 2min 54s\n",
-      "Wall time: 23.4 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time print queries_exp.compute_batch()"
    ]
@@ -1106,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -1115,18 +1025,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, -0.08257215597738024)\n",
-      "(1, -0.11069699509292312)\n",
-      "(2, -0.12883317005099618)\n",
-      "(271, 0.7564575645756457)\n",
-      "(268, 0.7761194029850746)\n"
+      "(0, 0.16789547076832276)\n",
+      "(1, 0.15541744247409714)\n",
+      "(2, 0.1462513080250244)\n",
+      "(3, 0.13839709280855148)\n",
+      "(4, 0.13139509503556943)\n",
+      "(2866, 0.3695045359385904)\n",
+      "(2813, 0.5510131532172058)\n"
      ]
     }
    ],
    "source": [
     "exp_results = []\n",
     "\n",
-    "for i in xrange(3):\n",
+    "for i in xrange(5):\n",
     "    res = (i, queries_exp.compute_batch())\n",
     "    print res\n",
     "    exp_results.append(res)\n",
@@ -1154,9 +1066,7 @@
    },
    "outputs": [],
    "source": [
-    "exp_results.append(('testing run', queries_exp.compute_batch(False)))\n",
-    "exp_results.append(('training state', evalCurrentState(True, queries_exp.num_training_items)))\n",
-    "exp_results.append(('testing state', evalCurrentState(False, queries_exp.num_training_items)))"
+    "[(p, np.isnan(p.get_value(borrow=True)).any()) for p in queries_exp.all_params]"
    ]
   },
   {
@@ -1167,82 +1077,7 @@
    },
    "outputs": [],
    "source": [
-    "for i in xrange(4):\n",
-    "    res = (i, queries_exp.compute_batch())\n",
-    "    print res\n",
-    "    exp_results.append(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[linear_final_l.W, linear_final_l.b]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "queries_exp.all_params[-2:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 3.09750247],\n",
-       "       [ 1.29256308],\n",
-       "       [ 1.28164816],\n",
-       "       [ 0.81887543],\n",
-       "       [ 0.87243396],\n",
-       "       [ 0.64066952],\n",
-       "       [ 1.24394166]], dtype=float32)"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "queries_exp.all_params[-2:][0].get_value(borrow=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "%time for i in range(5): print queries_exp.compute_batch()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "queries.values()[0]"
+    "queries_exp.failed_match"
    ]
   },
   {
