running boosting with training the word vectors, and the system was able to get to 77% on the testing set using only 10,000 training items

--- a/queries exp expanded features 3.ipynb
+++ b/queries exp expanded features 3.ipynb
@@ -739,8 +739,13 @@
     "            sequences=select_seq,\n",
     "        )\n",
     "\n",
-    "        self.groupped_elems = T.dot(self.selecting_matrix[-1], T.diag(T.exp(self.res_l)))\n",
-    "        self.groupped_res = T.log(self.groupped_elems.sum(axis=0)[T.arange(self.y_grouping.shape[0])])\n",
+    "        #self.groupped_elems = T.dot(self.selecting_matrix[-1], T.diag(T.exp(self.res_l)))\n",
+    "        #self.groupped_res = T.log(self.groupped_elems.sum(axis=0)[T.arange(self.y_grouping.shape[0])])\n",
+    "        \n",
+    "        self.groupped_elems = T.dot(self.selecting_matrix[-1].T, \n",
+    "                                    T.exp(self.res_l))\n",
+    "        self.groupped_res = T.log(self.groupped_elems)\n",
+    "        \n",
     "        self.loss_vec = self.groupped_res - self.res_l[self.y_grouping[:,2]]\n",
     "\n",
     "        self.all_params = (\n",
