tried using rectify and it is still doing about 73 at best on the test set

--- a/queries exp expanded features 4.ipynb
+++ b/queries exp expanded features 4.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -30,11 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Couldn't import dot_parser, loading of dot files will not be possible.\n"
+     ]
+    }
+   ],
    "source": [
     "from theano import *\n",
     "from lasagne.layers import InputLayer, get_output\n",
@@ -57,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -69,29 +77,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9915"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(queries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8917"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sum([any([g['gold'] for g in v.values()]) for v in queries.values()])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -121,18 +151,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4056055"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(wordvectors.vectors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -161,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -172,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -214,17 +255,17 @@
     "\n",
     "    page_content = {}\n",
     "\n",
-    "    class GetWikipediaWords(WikipediaReader, WikiRegexes):\n",
+    "#     class GetWikipediaWords(WikipediaReader, WikiRegexes):\n",
     "\n",
-    "        def readPage(ss, title, content, namespace):\n",
-    "            if namespace != 0:\n",
-    "                return\n",
-    "            tt = ss.convertToTitle(title)\n",
-    "            if tt in queried_pages:\n",
-    "                cnt = ss._wikiToText(content)\n",
-    "                page_content[tt] = wordvec.tokenize(cnt)\n",
+    "#         def readPage(ss, title, content, namespace):\n",
+    "#             if namespace != 0:\n",
+    "#                 return\n",
+    "#             tt = ss.convertToTitle(title)\n",
+    "#             if tt in queried_pages:\n",
+    "#                 cnt = ss._wikiToText(content)\n",
+    "#                 page_content[tt] = wordvec.tokenize(cnt)\n",
     "\n",
-    "    GetWikipediaWords(wikipedia_dump_fname).read()\n",
+    "#     GetWikipediaWords(wikipedia_dump_fname).read()\n",
     "    \n",
     "    rr = redirects\n",
     "    rq = queried_pages\n",
@@ -247,40 +288,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2min, sys: 83.2 ms, total: 2min\n",
+      "Wall time: 2min\n"
+     ]
+    }
+   ],
    "source": [
     "%time basePreProcessedQueries = PreProcessedQueries('/data/matthew/enwiki-20141208-pages-articles-multistream.xml')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4056055"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(wordvectors.vectors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "159840"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(basePreProcessedQueries.wordvecs.reverse_word_location)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -293,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -320,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -331,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -356,22 +428,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34863863"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sum(len(q) for q in queries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/theano/scan_module/scan_perform_ext.py:135: RuntimeWarning: numpy.ndarray size changed, may indicate binary incompatibility\n",
+      "  from scan_perform.scan_perform import *\n"
+     ]
+    }
+   ],
    "source": [
     "class EntityVectorLinkExp(basePreProcessedQueries):\n",
     "\n",
@@ -431,14 +523,14 @@
     "            num_filters=500,\n",
     "            filter_size=(self.num_words_to_use_conv, self.wordvecs.vector_size),\n",
     "            name='document_conv1',\n",
-    "            nonlinearity=lasagne.nonlinearities.tanh,\n",
+    "            nonlinearity=lasagne.nonlinearities.leaky_rectify,\n",
     "        )\n",
     "\n",
     "        self.document_max_l = lasagne.layers.Pool2DLayer(\n",
     "            self.document_conv1_l,\n",
     "            name='document_pool1',\n",
     "            pool_size=(self.document_length - self.num_words_to_use_conv, 1),\n",
-    "            mode='sum',\n",
+    "            mode='max',  # was sum\n",
     "        )\n",
     "\n",
     "        document_output_length = 200\n",
@@ -447,7 +539,7 @@
     "            self.document_max_l,\n",
     "            num_units=document_output_length,\n",
     "            name='doucment_dens1',\n",
-    "            nonlinearity=lasagne.nonlinearities.tanh,\n",
+    "            nonlinearity=lasagne.nonlinearities.leaky_rectify,\n",
     "        )\n",
     "\n",
     "#         self.document_drop1 = lasagne.layers.DropoutLayer(\n",
@@ -665,14 +757,14 @@
     "            name='target_wrds_conv1',\n",
     "            filter_size=(self.num_words_to_use_conv, self.wordvecs.vector_size),\n",
     "            num_filters=350,\n",
-    "            nonlinearity=lasagne.nonlinearities.tanh,\n",
+    "            nonlinearity=lasagne.nonlinearities.leaky_rectify,\n",
     "        )\n",
     "\n",
     "        self.target_words_pool1_l = lasagne.layers.Pool2DLayer(\n",
     "            self.target_words_conv1_l,\n",
     "            name='target_wrds_pool1',\n",
     "            pool_size=(self.sentence_length_short - self.num_words_to_use_conv, 1),\n",
-    "            mode='sum',\n",
+    "            mode='max',  # was sum\n",
     "        )\n",
     "\n",
     "        self.target_merge_l = lasagne.layers.ConcatLayer(\n",
@@ -1142,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -1172,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -1209,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -1234,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -1259,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -1270,13 +1362,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "queries_exp.num_training_items = 5000000 #5,000,000"
+    "queries_exp.num_training_items = 50000"
    ]
   },
   {
@@ -1325,11 +1417,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, (0.12140064603114678, 0.12140064603114678))\n",
+      "(2803, 0.5672493756689262)\n",
+      "(2796, 0.6258941344778255)\n",
+      "(1, (0.084836251593621292, 0.084836251593621292))\n",
+      "(2803, 0.6878344630752765)\n",
+      "(2796, 0.6909871244635193)\n",
+      "(2, (0.066983301585538502, 0.066983301585538502))\n",
+      "(2803, 0.7559757402782733)\n",
+      "(2796, 0.7371244635193133)\n",
+      "(3, (0.055569890802141461, 0.055569890802141461))\n",
+      "(2803, 0.8094898323225116)\n",
+      "(2796, 0.7535765379113019)\n",
+      "(4, (0.046669532529536047, 0.046669532529536047))\n",
+      "(2803, 0.8448091330717089)\n",
+      "(2796, 0.7532188841201717)\n",
+      "(5, (0.040310455870159564, 0.040310455870159564))\n",
+      "(2803, 0.8640742062076346)\n",
+      "(2796, 0.7453505007153076)\n",
+      "(6, (0.035153946080290162, 0.035153946080290162))\n",
+      "(2803, 0.881198715661791)\n",
+      "(2796, 0.734620886981402)\n",
+      "(7, (0.03131446929044121, 0.03131446929044121))\n",
+      "(2803, 0.9018908312522298)\n",
+      "(2796, 0.727110157367668)\n",
+      "(8, (0.027279431073415041, 0.027279431073415041))\n",
+      "(2803, 0.906528719229397)\n",
+      "(2796, 0.707796852646638)\n",
+      "(9, (0.025641786544096185, 0.025641786544096185))\n",
+      "(2803, 0.9165180164109882)\n",
+      "(2796, 0.703862660944206)\n",
+      "(10, (0.023793866227684247, 0.023793866227684247))\n",
+      "(2803, 0.917588298251873)\n",
+      "(2796, 0.6974248927038627)\n",
+      "(11, (0.020613328421088508, 0.020613328421088508))\n",
+      "(2803, 0.9197288619336426)\n",
+      "(2796, 0.6798998569384835)\n",
+      "(12, (0.019289032960083208, 0.019289032960083208))\n",
+      "(2803, 0.9332857652515162)\n",
+      "(2796, 0.677038626609442)\n",
+      "(13, (0.017205300544333654, 0.017205300544333654))\n",
+      "(2803, 0.9347128077060293)\n",
+      "(2796, 0.6791845493562232)\n",
+      "(14, (0.016047132412632233, 0.016047132412632233))\n",
+      "(2803, 0.9393506956831966)\n",
+      "(2796, 0.6623748211731044)\n",
+      "(15, (0.015135604716046911, 0.015135604716046911))\n",
+      "(2803, 0.937210132001427)\n",
+      "(2796, 0.6573676680972819)\n"
+     ]
+    }
+   ],
    "source": [
     "exp_results = []\n",
     "\n",
